--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <!-- Secção 2: Imagem -->
   <section class="definition" id="definition">
-    <img src="assets/Diapositivo6.PNG" alt="Thryvoqel Definition">
+    <img src="assets/Diapositivo6.png" alt="Thryvoqel Definition">
   </section>
 
   <!-- Rodapé de contactos -->
