--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
     .video-desktop { display: block; }
     .video-mobile { display: none; }
 
-    /* Mobile → usa contain */
+    /* Mobile → ajuste para 9:16 */
     @media (max-width: 768px) {
       .video-desktop { display: none; }
-      .video-mobile { display: block; object-fit: contain; background: #000; }
+      .video-mobile {
+        display: block;
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0; left: 0;
+        background: #000;
+      }
     }
 
     .sound-btn {
@@ -120,7 +128,7 @@
 
   <!-- Secção 2: Imagem -->
   <section class="definition" id="definition">
-    <img src="assets/Diapositivo6.png" alt="Thryvoqel Definition">
+    <img src="assets/Diapositivo6.PNG" alt="Thryvoqel Definition">
   </section>
 
   <!-- Rodapé de contactos -->
