--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
     .video-desktop { display: block; }
     .video-mobile { display: none; }
 
-    /* Mobile → ajuste para 9:16 */
+    /* Mobile → vídeo 9:16 com zoom fixo */
     @media (max-width: 768px) {
       .video-desktop { display: none; }
       .video-mobile {
         display: block;
-        object-fit: contain;
         width: 100%;
         height: 100%;
         position: absolute;
-        top: 0; left: 0;
+        top: 50%; left: 50%;
+        transform: translate(-50%, -50%) scale(0.75); /* Zoom fixo a 75% */
+        object-fit: contain;
         background: #000;
       }
     }
@@ -128,7 +129,7 @@
 
   <!-- Secção 2: Imagem -->
   <section class="definition" id="definition">
-    <img src="assets/Diapositivo6.PNG" alt="Thryvoqel Definition">
+    <img src="assets/Diapositivo6.png" alt="Thryvoqel Definition">
   </section>
 
   <!-- Rodapé de contactos -->
