--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     .contact-footer {
       background: #000;
       padding: 20px;
-      font-size: 15px;
+      font-size: 13px;
       text-align: center;
       color: #fff;
       font-family: "Calibri Light", Arial, sans-serif;
@@ -143,7 +143,7 @@
 
   <!-- Secção 2: Imagem -->
   <section class="definition" id="definition">
-    <img src="assets/Diapositivo6.PNG" alt="Thryvoqel Definition">
+    <img src="assets/Diapositivo6.png" alt="Thryvoqel Definition">
   </section>
 
   <!-- Rodapé de contactos -->
